added/styled icons

--- a/assets/css/toDoList.css
+++ b/assets/css/toDoList.css
@@ -14,6 +14,15 @@ ul{
   padding: 0;
 }
 
+.fa-plus {
+  color: white;
+  float: right;
+}
+
+.fa-trash-alt {
+    color: red;  
+}
+
 body {
   font-family: roboto;
   background: #ef32d9;  /* fallback for old browsers */
