format todo list

--- a/assets/css/toDoList.css
+++ b/assets/css/toDoList.css
@@ -19,10 +19,6 @@ ul{
   float: right;
 }
 
-.fa-trash-alt {
-    color: red;  
-}
-
 body {
   font-family: roboto;
   background: #ef32d9;  /* fallback for old browsers */
@@ -42,6 +38,23 @@ li:nth-child(2n) {
   background: #F7F7F7;
 }
 
+span {
+  background: #e74c3c;
+  height: 40px;
+  margin-right: 20px;
+  text-align: center;
+  color: white;
+  width: 0px;
+  display: inline-block;
+  opacity: 0;
+}
+
+li:hover span {
+  width: 40px;
+  transition: 0.2s linear;
+  opacity: 1.0;
+}
+
 input {
 font-size: 18px;
 background-color: #F7F7F7;
@@ -49,6 +62,7 @@ width: 100%;
 padding: 13px 13px 13px 20px;
 box-sizing: border-box;
 color: #2980b9;
+border: 3px solid rgba(0,0,0,0);
 
 }
 
